TODO.md: virtual threads at the storage door is item 3, with the Java 25 move inside it
Streaming ingest slides to 4 and is written in the new style — a loop inside
a transaction — rather than as a Publisher threaded through a reactive one.
The JDK bump is called out as step 0 of item 3, not a separate item: JEP 491
is the reason it is more than cosmetic here.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>